fix mobile overflow fr this time

--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,17 @@
   background-color: rgb(51, 51, 51);
 }
 
+.posts-container {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+}
+
 .post {
-  width: max(50vw, 1000px);
-  max-width: 85vw;
+  width: max(50%, 1000px);
+  max-width: 85%;
   margin: 0 auto;
-  padding: 2rem;
+  padding-top: .25rem;
   text-align: left;
 }
